api path for fulltext evaluation
